Bug 800198 - Make mContainerReferenceFrame the reference frame for the items inside the container, not the container itself. r=roc